--- a/exercicios/ex020/☄.html
+++ b/exercicios/ex020/☄.html
@@ -24,7 +24,7 @@
       [V]. Por causa das habilidades extremamente móveis que o Portal Fruit possui, ele pode evitar atordoamentos
       típicos como Rumble , Dough e Buddha</h3>
    <img src="maxresdefault.jpg" alt="Portal">
-   <a href="index01.html" target="_blank" rel="next">Próxima Página ➻</a>
+   <a href="portal.html" target="_blank" rel="next">Próxima Página ➻</a>
 </body>
 
 </html>
