--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -4,12 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Tabelas </title>
+  <title>Tabela Desafio</title>
 </head>
 <style>
   body {
     font-family: Arial, sans-serif;
-
   }
 
   table {
@@ -25,27 +24,33 @@
 </style>
 
 <body>
-  <h1>Mesclagem de Células</h1>
+  <h1>Tabela</h1>
   <table>
     <tr>
-      <td>A</td>
-      <td colspan="2">B</td>
-
+      <td>1</td>
+      <td>2</td>
+      <td rowspan="2">3</td>
+      <td>4</td>
     </tr>
     <tr>
-      <td rowspan="3">D</td>
-      <td>E</td>
-      <td>F</td>
+      <td>5</td>
+      <td>6</td>
+      <td>7</td>
     </tr>
     <tr>
-
-      <td>H</td>
-      <td>I</td>
+      <td colspan="3">8</td>
+      <td>9</td>
     </tr>
     <tr>
-
-      <td>L</td>
-      <td>M</td>
+      <td rowspan="2">10</td>
+      <td colspan="2">11</td>
+      <td>12</td>
+      <td>13</td>
+    </tr>
+    <tr>
+      <td>14</td>
+      <td>15</td>
+      <td colspan="2"></td> <!-- Adicionando uma célula vazia para balancear a linha -->
     </tr>
   </table>
 </body>
