--- a/desafios/d013/index.html
+++ b/desafios/d013/index.html
@@ -4,48 +4,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Tabelas </title>
+  <title> Tabelas Desafio 2</title>
 </head>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-
-  }
-
-  table {
-    border-collapse: collapse;
-    width: 300px;
-  }
-
-  td {
-    border: 1px solid black;
-    padding: 10px;
-    text-align: center;
-  }
-</style>
 
 <body>
-  <h1>Mesclagem de Células</h1>
+  <h1>Tabela</h1>
   <table>
     <tr>
       <td>A</td>
-      <td colspan="2">B</td>
-
+      <td>B</td>
+      <td>C</td>
+      <td></td>
     </tr>
     <tr>
-      <td rowspan="3">D</td>
+      <td>D</td>
       <td>E</td>
       <td>F</td>
+      <td></td>
     </tr>
     <tr>
-
+      <td>G</td>
       <td>H</td>
       <td>I</td>
+      <td></td>
     </tr>
     <tr>
-
+      <td>J</td>
       <td>L</td>
       <td>M</td>
+      <td>N</td>
     </tr>
   </table>
 </body>
